fix broken css block

--- a/src/scss/styles-1-large-main.scss
+++ b/src/scss/styles-1-large-main.scss
@@ -708,7 +708,7 @@ footer#solstice-footer a {
 /* The alert message box */
 .alert {
    padding: 20px;
-   background-color:  #FF1464
+   background-color:  #FF1464;
    color: white;
 }
 
